# bitty-gpt

./: .gitignore  LEARNING.md  README  README.md  data-download.sh  main.py  pyproject.toml  scope.md  test.txt  vocab-tinystories-training-set.json
data/: Overall.txt  data-download.sh  processing.py
experiments/: norms.py
src/: activations.py  dataset.py  inference.py  loss.py  nn_modules.py  optimizer.py  train.py
