[project]
name = "bitty-gpt"
version = "0.1.0"
description = "Lnaguage model Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitty-tokenizer>=0.1.5",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "torch>=2.9.1",
    "wandb>=0.23.1",
]
